# favannat

./: Cargo.toml  README.md
src/: bad_genome.ron  lib.rs  network.rs
src/looping/: evaluator.rs  fabricator.rs
src/matrix/: evaluator.rs  fabricator.rs  mod.rs
src/matrix/feedforward/: evaluator.rs  fabricator.rs
src/matrix/recurrent/: evaluator.rs  fabricator.rs
src/neat_original/: evaluator.rs  fabricator.rs
src/network/: io.rs  mod.rs
src/sparse_matrix/: evaluator.rs  fabricator.rs  mod.rs
src/sparse_matrix/feedforward/: evaluator.rs  fabricator.rs
src/sparse_matrix/recurrent/: evaluator.rs  fabricator.rs  mod.rs
tests/: parse_bad_genome.rs
