[package]
name = "favannat"
version = "0.5.0"
authors = ["Silvan Buedenbender <silvancodes@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Algorithms to evaluate the function encoded in ANN-like structures."
homepage = "https://github.com/SilvanCodes/favannat"
documentation = "https://docs.rs/favannat"
repository = "https://github.com/SilvanCodes/favannat"
readme = "README.md"
keywords = ["ann", "evolution"]
categories = ["algorithms", "science", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.28.0"
nalgebra-sparse = "0.4"
ndarray = { version = "0.15", optional = true }
